# ChangeLog for x11-themes/crystal
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/crystal/ChangeLog,v 1.18 2006/01/03 19:33:18 voxus Exp $

*crystal-0.9.7 (03 Jan 2006)

  03 Jan 2006; Konstantin Arkhipov <voxus@gentoo.org> +crystal-0.9.7.ebuild,
  -crystal-0.9.3.ebuild, -crystal-0.9.4.ebuild:
  Version bump, closing bug #114191.

  15 Oct 2005; Joseph Jezak <josejx@gentoo.org> crystal-0.9.2.ebuild:
  Marked ppc stable for bug #107754.

  19 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org> crystal-0.9.2.ebuild:
  Stable on sparc

*crystal-0.9.4 (13 Aug 2005)

  13 Aug 2005; Konstantin Arkhipov <voxus@gentoo.org> +crystal-0.9.4.ebuild:
  Version bump.

*crystal-0.9.3 (07 Aug 2005)

  07 Aug 2005; Konstantin Arkhipov <voxus@gentoo.org> +crystal-0.9.3.ebuild:
  Version bump.

  03 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> crystal-0.9.2.ebuild:
  Keyworded ~sparc

  15 May 2005; Gregorio Guidi <greg_g@gentoo.org> crystal-0.9.2.ebuild:
  Correct dependencies (#92649).

  28 Apr 2005; Konstantin Arkhipov <voxus@gentoo.org> -crystal-0.9.1.ebuild,
  crystal-0.9.2.ebuild:
  Mark 0.9.2 stable on x86 and amd64.

*crystal-0.9.2 (23 Mar 2005)

  23 Mar 2005; Konstantin Arkhipov <voxus@gentoo.org> +crystal-0.9.2.ebuild:
  Version bump.

  08 Mar 2005; Gregorio Guidi <greg_g@gentoo.org> -crystal-0.9.0.ebuild,
  crystal-0.9.1.ebuild:
  Stable on x86.

*crystal-0.9.1 (30 Dec 2004)

  30 Dec 2004; Konstantin Arkhipov <voxus@gentoo.org>
  -crystal-0.8.0.ebuild,
  crystal-0.9.0.ebuild,
  +crystal-0.9.1.ebuild:
  Version bump, closing bug #76115. 0.9.0 replaces 0.8.0 in stable x86.

*crystal-0.9.0 (09 Nov 2004)

  09 Nov 2004; Konstantin Arkhipov <voxus@gentoo.org>
  +crystal-0.9.0.ebuild:
  Version bump, closing #70190.

*crystal-0.8.0 (28 Oct 2004)

  28 Oct 2004; Konstantin Arkhipov <voxus@gentoo.org>
  -crystal-0.7.5.ebuild:
  Readded ~ppc keyword to 0.8 and unmasked on x86.  

*crystal-0.8.0 (28 Sep 2004)
