@@ -1,6 +1,8 @@
-MD5 2834a4f632d675b04e8b20f6723076b7 ChangeLog 2501
+MD5 cc785fc364380eca8ba06be6bc7ab9b8 ChangeLog 2646
 MD5 dadc006614f33128f3da411b681eb231 crystal-0.9.2.ebuild 599
 MD5 af37558bef45a0942e6204ca33a2317a crystal-0.9.7.ebuild 578
+MD5 af37558bef45a0942e6204ca33a2317a crystal-0.9.8.ebuild 578
 MD5 73ac90add2f2f6c3612c86f520e38c2e files/digest-crystal-0.9.2 72
 MD5 1d13b65450fcc83190758342ef4c3726 files/digest-crystal-0.9.7 66
+MD5 29a14e2937db8913da095fc84c4dda04 files/digest-crystal-0.9.8 66
 MD5 b045d3420e428a024e2afea15d6b57a7 metadata.xml 199
